@@ -1,0 +1,322 @@
+/**
+ * Author......: See docs/credits.txt
+ * License.....: MIT
+ */
+
+#define NEW_SIMD_CODE
+
+#ifdef KERNEL_STATIC
+#include M2S(INCLUDE_PATH/inc_vendor.h)
+#include M2S(INCLUDE_PATH/inc_types.h)
+#include M2S(INCLUDE_PATH/inc_platform.cl)
+#include M2S(INCLUDE_PATH/inc_common.cl)
+#include M2S(INCLUDE_PATH/inc_simd.cl)
+#include M2S(INCLUDE_PATH/inc_hash_md4.cl)
+#include M2S(INCLUDE_PATH/inc_hash_sha1.cl)
+#endif
+
+#define COMPARE_S M2S(INCLUDE_PATH/inc_comp_single.cl)
+#define COMPARE_M M2S(INCLUDE_PATH/inc_comp_multi.cl)
+
+typedef struct dcc2_tmp
+{
+  u32 ipad[5];
+  u32 opad[5];
+
+  u32 dgst[5];
+  u32 out[4];
+
+} dcc2_tmp_t;
+
+#ifdef KERNEL_STATIC
+DECLSPEC u8 hex_convert (const u8 c)
+{
+  return (c & 15) + (c >> 6) * 9;
+}
+
+DECLSPEC u8 hex_to_u8 (PRIVATE_AS const u8 *hex)
+{
+  u8 v = 0;
+
+  v |= ((u8) hex_convert (hex[1]) << 0);
+  v |= ((u8) hex_convert (hex[0]) << 4);
+
+  return (v);
+}
+#endif
+
+DECLSPEC void hmac_sha1_run_V (PRIVATE_AS u32x *w0, PRIVATE_AS u32x *w1, PRIVATE_AS u32x *w2, PRIVATE_AS u32x *w3, PRIVATE_AS u32x *ipad, PRIVATE_AS u32x *opad, PRIVATE_AS u32x *digest)
+{
+  digest[0] = ipad[0];
+  digest[1] = ipad[1];
+  digest[2] = ipad[2];
+  digest[3] = ipad[3];
+  digest[4] = ipad[4];
+
+  sha1_transform_vector (w0, w1, w2, w3, digest);
+
+  w0[0] = digest[0];
+  w0[1] = digest[1];
+
+  w0[2] = digest[2];
+  w0[3] = digest[3];
+  w1[0] = digest[4];
+  w1[1] = 0x80000000;
+  w1[2] = 0;
+  w1[3] = 0;
+  w2[0] = 0;
+  w2[1] = 0;
+  w2[2] = 0;
+  w2[3] = 0;
+  w3[0] = 0;
+  w3[1] = 0;
+  w3[2] = 0;
+  w3[3] = (64 + 20) * 8;
+
+  digest[0] = opad[0];
+  digest[1] = opad[1];
+  digest[2] = opad[2];
+  digest[3] = opad[3];
+  digest[4] = opad[4];
+
+  sha1_transform_vector (w0, w1, w2, w3, digest);
+}
+
+KERNEL_FQ void m31600_init (KERN_ATTR_TMPS (dcc2_tmp_t))
+{
+  /**
+   * base
+   */
+
+  const u64 gid = get_global_id (0);
+
+  if (gid >= GID_CNT) return;
+
+  // dcc1
+
+  u32 in[16];
+
+  in[ 0] = pws[gid].i[ 0];
+  in[ 1] = pws[gid].i[ 1];
+  in[ 2] = pws[gid].i[ 2];
+  in[ 3] = pws[gid].i[ 3];
+  in[ 4] = pws[gid].i[ 4];
+  in[ 5] = pws[gid].i[ 5];
+  in[ 6] = pws[gid].i[ 6];
+  in[ 7] = pws[gid].i[ 7];
+
+  u32 out[4];
+
+  PRIVATE_AS u8 *in_ptr  = (PRIVATE_AS u8 *) in;
+  PRIVATE_AS u8 *out_ptr = (PRIVATE_AS u8 *) out;
+
+  for (int i = 0, j = 0; i < 16; i += 1, j += 2)
+  {
+    out_ptr[i] = hex_to_u8 (in_ptr + j);
+  }
+
+  md4_ctx_t md4_ctx;
+
+  md4_init (&md4_ctx);
+
+  md4_ctx.w0[0] = out[0];
+  md4_ctx.w0[1] = out[1];
+  md4_ctx.w0[2] = out[2];
+  md4_ctx.w0[3] = out[3];
+
+  md4_ctx.len = 16;
+
+  md4_update_global_utf16le (&md4_ctx, salt_bufs[SALT_POS_HOST].salt_buf, salt_bufs[SALT_POS_HOST].salt_len);
+
+  md4_final (&md4_ctx);
+
+  md4_ctx.h[0] = hc_swap32_S (md4_ctx.h[0]);
+  md4_ctx.h[1] = hc_swap32_S (md4_ctx.h[1]);
+  md4_ctx.h[2] = hc_swap32_S (md4_ctx.h[2]);
+  md4_ctx.h[3] = hc_swap32_S (md4_ctx.h[3]);
+
+  // dcc2
+
+  u32 w0[4];
+  u32 w1[4];
+  u32 w2[4];
+  u32 w3[4];
+
+  w0[0] = md4_ctx.h[0];
+  w0[1] = md4_ctx.h[1];
+  w0[2] = md4_ctx.h[2];
+  w0[3] = md4_ctx.h[3];
+  w1[0] = 0;
+  w1[1] = 0;
+  w1[2] = 0;
+  w1[3] = 0;
+  w2[0] = 0;
+  w2[1] = 0;
+  w2[2] = 0;
+  w2[3] = 0;
+  w3[0] = 0;
+  w3[1] = 0;
+  w3[2] = 0;
+  w3[3] = 0;
+
+  sha1_hmac_ctx_t sha1_hmac_ctx;
+
+  sha1_hmac_init_64 (&sha1_hmac_ctx, w0, w1, w2, w3);
+
+  tmps[gid].ipad[0] = sha1_hmac_ctx.ipad.h[0];
+  tmps[gid].ipad[1] = sha1_hmac_ctx.ipad.h[1];
+  tmps[gid].ipad[2] = sha1_hmac_ctx.ipad.h[2];
+  tmps[gid].ipad[3] = sha1_hmac_ctx.ipad.h[3];
+  tmps[gid].ipad[4] = sha1_hmac_ctx.ipad.h[4];
+
+  tmps[gid].opad[0] = sha1_hmac_ctx.opad.h[0];
+  tmps[gid].opad[1] = sha1_hmac_ctx.opad.h[1];
+  tmps[gid].opad[2] = sha1_hmac_ctx.opad.h[2];
+  tmps[gid].opad[3] = sha1_hmac_ctx.opad.h[3];
+  tmps[gid].opad[4] = sha1_hmac_ctx.opad.h[4];
+
+  sha1_hmac_update_global_utf16le_swap (&sha1_hmac_ctx, salt_bufs[SALT_POS_HOST].salt_buf, salt_bufs[SALT_POS_HOST].salt_len);
+
+  w0[0] = 1;
+  w0[1] = 0;
+  w0[2] = 0;
+  w0[3] = 0;
+  w1[0] = 0;
+  w1[1] = 0;
+  w1[2] = 0;
+  w1[3] = 0;
+  w2[0] = 0;
+  w2[1] = 0;
+  w2[2] = 0;
+  w2[3] = 0;
+  w3[0] = 0;
+  w3[1] = 0;
+  w3[2] = 0;
+  w3[3] = 0;
+
+  sha1_hmac_update_64 (&sha1_hmac_ctx, w0, w1, w2, w3, 4);
+
+  sha1_hmac_final (&sha1_hmac_ctx);
+
+  tmps[gid].dgst[0] = sha1_hmac_ctx.opad.h[0];
+  tmps[gid].dgst[1] = sha1_hmac_ctx.opad.h[1];
+  tmps[gid].dgst[2] = sha1_hmac_ctx.opad.h[2];
+  tmps[gid].dgst[3] = sha1_hmac_ctx.opad.h[3];
+  tmps[gid].dgst[4] = sha1_hmac_ctx.opad.h[4];
+
+  tmps[gid].out[0] = tmps[gid].dgst[0];
+  tmps[gid].out[1] = tmps[gid].dgst[1];
+  tmps[gid].out[2] = tmps[gid].dgst[2];
+  tmps[gid].out[3] = tmps[gid].dgst[3];
+}
+
+KERNEL_FQ void m31600_loop (KERN_ATTR_TMPS (dcc2_tmp_t))
+{
+  /**
+   * base
+   */
+
+  const u64 gid = get_global_id (0);
+
+  if ((gid * VECT_SIZE) >= GID_CNT) return;
+
+  u32x ipad[5];
+  u32x opad[5];
+
+  ipad[0] = packv (tmps, ipad, gid, 0);
+  ipad[1] = packv (tmps, ipad, gid, 1);
+  ipad[2] = packv (tmps, ipad, gid, 2);
+  ipad[3] = packv (tmps, ipad, gid, 3);
+  ipad[4] = packv (tmps, ipad, gid, 4);
+
+  opad[0] = packv (tmps, opad, gid, 0);
+  opad[1] = packv (tmps, opad, gid, 1);
+  opad[2] = packv (tmps, opad, gid, 2);
+  opad[3] = packv (tmps, opad, gid, 3);
+  opad[4] = packv (tmps, opad, gid, 4);
+
+  /**
+   * iter1
+   */
+
+  u32x dgst[5];
+  u32x out[4];
+
+  dgst[0] = packv (tmps, dgst, gid, 0);
+  dgst[1] = packv (tmps, dgst, gid, 1);
+  dgst[2] = packv (tmps, dgst, gid, 2);
+  dgst[3] = packv (tmps, dgst, gid, 3);
+  dgst[4] = packv (tmps, dgst, gid, 4);
+
+  out[0] = packv (tmps, out, gid, 0);
+  out[1] = packv (tmps, out, gid, 1);
+  out[2] = packv (tmps, out, gid, 2);
+  out[3] = packv (tmps, out, gid, 3);
+
+  for (u32 i = 0; i < LOOP_CNT; i++)
+  {
+    u32x w0[4];
+    u32x w1[4];
+    u32x w2[4];
+    u32x w3[4];
+
+    w0[0] = dgst[0];
+    w0[1] = dgst[1];
+    w0[2] = dgst[2];
+    w0[3] = dgst[3];
+    w1[0] = dgst[4];
+    w1[1] = 0x80000000;
+    w1[2] = 0;
+    w1[3] = 0;
+    w2[0] = 0;
+    w2[1] = 0;
+    w2[2] = 0;
+    w2[3] = 0;
+    w3[0] = 0;
+    w3[1] = 0;
+    w3[2] = 0;
+    w3[3] = (64 + 20) * 8;
+
+    hmac_sha1_run_V (w0, w1, w2, w3, ipad, opad, dgst);
+
+    out[0] ^= dgst[0];
+    out[1] ^= dgst[1];
+    out[2] ^= dgst[2];
+    out[3] ^= dgst[3];
+  }
+
+  unpackv (tmps, dgst, gid, 0, dgst[0]);
+  unpackv (tmps, dgst, gid, 1, dgst[1]);
+  unpackv (tmps, dgst, gid, 2, dgst[2]);
+  unpackv (tmps, dgst, gid, 3, dgst[3]);
+  unpackv (tmps, dgst, gid, 4, dgst[4]);
+
+  unpackv (tmps, out, gid, 0, out[0]);
+  unpackv (tmps, out, gid, 1, out[1]);
+  unpackv (tmps, out, gid, 2, out[2]);
+  unpackv (tmps, out, gid, 3, out[3]);
+}
+
+KERNEL_FQ void m31600_comp (KERN_ATTR_TMPS (dcc2_tmp_t))
+{
+  /**
+   * base
+   */
+
+  const u64 gid = get_global_id (0);
+
+  if (gid >= GID_CNT) return;
+
+  const u64 lid = get_local_id (0);
+
+  const u32 r0 = tmps[gid].out[DGST_R0];
+  const u32 r1 = tmps[gid].out[DGST_R1];
+  const u32 r2 = tmps[gid].out[DGST_R2];
+  const u32 r3 = tmps[gid].out[DGST_R3];
+
+  #define il_pos 0
+
+  #ifdef KERNEL_STATIC
+  #include COMPARE_M
+  #endif
+}
